# fqkit

./: Cargo.toml  README.md
src/: command.rs  main.rs  utils.rs
src/cli/: stats.rs  subfq.rs
