[workspace]

[package]
name = "fqkit"
version = "0.4.15"
edition = "2024"
authors = ["sharkLoc <mmtinfo@163.com>"]
rust-version = "1.85.0"
homepage = "https://github.com/sharkLoc/fqkit"
repository = "https://github.com/sharkLoc/fqkit"
categories = ["science::bioinformatics::sequence-analysis","command-line-utilities"]
description = "fqkit: a simple and cross-platform program for fastq file manipulation"
keywords = ["fastq", "reads","bio", "hts", "barcode"]
readme = "README.md"
license = "GPL-3.0"
exclude = [
    "example/*",
    "doc/*"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
anyhow = "1.0.100"
bzip2 = "0.6.0"
chrono = "0.4.40"
clap = { version = "4.5.49", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "3.0.4"
colored = "3.0.0"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
env_logger = "0.10.2"
flate2 = "1.1.4"
log = "0.4.28"
lowcharts = "0.5.8"
num_cpus = "1.17.0"
paraseq = "0.1.5"
parking_lot = "0.12.5"
plotters = "0.3.7"
rand = "0.9.0"
rand_pcg = "0.9.0"
rayon = "1.11.0"
regex = "1.12.2"
rgb = "0.8.36"
term_size = "0.3.2"
textplots = "0.8.7"
thiserror = "2.0.17"
xz2 = "0.1.7"
zstd = "0.13.3"


[profile.release]
strip = true
